# Artpark-Robotics-TeamCyborg

./: LICENSE  README.md  plugin_collection.xml
bot_control/: CMakeLists.txt  package.xml
washroom_cleaner/: CMakeLists.txt  package.xml
washroom_cleaner/config/: claw_control.yaml  joint_names_toilet_cleaning_bot.yaml
washroom_cleaner/launch/: display.launch  display_bot.launch  display_washroom.launch  gazebo_bot.launch  gazebo_env.launch  gazebo_washroom.launch  spawn_bot.launch
washroom_cleaner/meshes/: Link.STL  base_link.STL  base_link_bot.STL  brush_bot.STL  camera_bot.STL  claw_left_bot.STL  claw_right_bot.STL  distance_sensor_bot.STL  drum_left_bot.STL  drum_right_bot.STL  dustbin_bot.STL  left_front_wheel_bot.STL  left_rear_wheel_bot.STL  link_1.1.STL  link_1.1_bot.STL  link_1.2.1-2.STL  link_1.2.1_bot.STL  link_1.2_bot.STL  link_2.1.STL  link_2.STL  right_front_wheel_bot.STL  right_rear_wheel_bot.STL
washroom_cleaner/urdf/: bot.csv  bot.urdf  bot.urdf.xacro  bot_base.urdf.xacro  distance_sensor.urdf.xacro  kinect.urdf.xacro  toilet_cleaning_bot.csv  toilet_cleaning_bot.urdf  washroom.csv  washroom.urdf  washroom_cleaner.csv  washroom_cleaner.urdf
washroom_cleaner/worlds/: washroom.world
