<?xml version="1.0"?>
<package format="2">
  <name>washroom_cleaner</name>
  <version>0.0.0</version>
  <description>The washroom_cleaner package</description>

  <maintainer email="suchiv2311@gmail.com">TangyStone8</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>

  </export>
</package>
